Dynamic regular vacation form for sigma/diall refactored.

--- a/templates/greenhousePostponeVacationFormTemplate.html
+++ b/templates/greenhousePostponeVacationFormTemplate.html
@@ -6,7 +6,7 @@
     <p>Во вложении образец заявления на перенос отпуска для сотрудников ООО "Гринхаус".</p>
     <p>Заполните его, подпишите и передайте сотруднику службы по работе с персоналом.</p>
     <p>С уважением, <br>Служба по работе с персоналом</p>
-    <img src="https://chernuylabs.ru/hrbot_new/files/greenhouse_mail_ava.jpg">
+    <img src="https://sigmabot.ddns.net/chatbot/files/greenhouse_mail_ava.jpg">
 </head>
 <body>
 
