--- a/templates/sigmaCodeConfirmationTemplate.html
+++ b/templates/sigmaCodeConfirmationTemplate.html
@@ -6,7 +6,7 @@
     <p>Для подтверждения, что вы являетесь сотрудником компании ООО "СИГМА КЭПИТАЛ", пожалуйста, отправьте код подтверждения боту «Персональный ассистент работника» в Telegram</p>
     <p>Код подтверждения: <b>{confirmationCode}</b></p>
     <p>С уважением, <br>Отдел по работе с персоналом</p>
-    <img src="https://chernuylabs.ru/hrbot_new/files/sigma_mail_ava.jpg">
+    <img src="https://sigmabot.ddns.net/chatbot/files/sigma_mail_ava.jpg">
 </head>
 <body>
 </body>
