--- a/templates/sigmaRegularVacationFormTemplate.html
+++ b/templates/sigmaRegularVacationFormTemplate.html
@@ -6,7 +6,7 @@
     <p>Во вложении образец заявления на отпуск для сотрудников ООО "СИГМА КЭПИТАЛ".</p>
     <p>Заполните его, подпишите и передайте сотруднику отдела по работе с персоналом.</p>
     <p>С уважением, <br>Отдел по работе с персоналом</p>
-    <img src="https://chernuylabs.ru/hrbot_new/files/sigma_mail_ava.jpg">
+    <img src="https://sigmabot.ddns.net/chatbot/files/sigma_mail_ava.jpg">
 </head>
 <body>
 </body>
