--- a/templates/diallRegularVacationFormTemplate.html
+++ b/templates/diallRegularVacationFormTemplate.html
@@ -6,7 +6,7 @@
     <p>Во вложении образец заявления на отпуск для сотрудников ООО "ДИАЛЛ АЛЬЯНС".</p>
     <p>Заполните его, подпишите и передайте сотруднику Департамента по работе с персоналом.</p>
     <p>С уважением, <br>Департамент по работе с персоналом</p>
-    <img src="https://chernuylabs.ru/hrbot_new/files/diall_mail_ava.jpg">
+    <img src="https://sigmabot.ddns.net/chatbot/files/diall_mail_ava.jpg">
 </head>
 <body>
 
