--- a/templates/greenhouseCodeConfirmationTemplate.html
+++ b/templates/greenhouseCodeConfirmationTemplate.html
@@ -6,7 +6,7 @@
     <p>Для подтверждения, что вы являетесь сотрудником компании ООО "Гринхаус", пожалуйста, отправьте код подтверждения боту «Персональный ассистент работника» в Telegram</p>
     <p>Код подтверждения: <b>{confirmationCode}</b></p>
     <p>С уважением, <br>Служба по работе с персоналом</p>
-    <img src="https://chernuylabs.ru/hrbot_new/files/greenhouse_mail_ava.jpg">
+    <img src="https://sigmabot.ddns.net/chatbot/files/greenhouse_mail_ava.jpg">
 </head>
 <body>
 
