Added gotham pro fonts family to regular vacation template.

--- a/templates/diallRegularVacationFormTemplate.html
+++ b/templates/diallRegularVacationFormTemplate.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+    <style>
+        @font-face {
+            font-family: GothamPro;
+            src: url(../fonts/gothampro.ttf);
+        }
+    </style>
+</head>
+<body>
     <meta charset="UTF-8">
     <p>Здравствуйте, {firstname}</p>
     <p>Во вложении образец заявления на отпуск для сотрудников ООО "ДИАЛЛ АЛЬЯНС".</p>
     <p>Заполните его, подпишите и передайте сотруднику Департамента по работе с персоналом.</p>
     <p>С уважением, <br>Департамент по работе с персоналом</p>
     <img src="https://sigmabot.ddns.net/chatbot/files/diall_mail_ava.jpg">
-</head>
-<body>
-
 </body>
 </html>
