Added gotham pro fonts family to code and postponed vacation templates.

--- a/templates/diallCodeConfirmationTemplate.html
+++ b/templates/diallCodeConfirmationTemplate.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+    <style>
+        @font-face {
+            font-family: GothamPro;
+            src: url(../fonts/gothampro.ttf);
+        }
+    </style>
+</head>
+<body>
     <meta charset="UTF-8">
     <p>Здравствуйте, {fullname}</p>
     <p>Для подтверждения, что вы являетесь сотрудником компании ООО "ДИАЛЛ АЛЬЯНС", пожалуйста, отправьте код подтверждения боту «Персональный ассистент работника» в Telegram</p>
     <p>Код подтверждения: <b>{confirmationCode}</b></p>
     <p>С уважением, <br>Департамент по работе с персоналом</p>
     <img src="https://sigmabot.ddns.net/chatbot/files/diall_mail_ava.jpg">
-</head>
-<body>
-
 </body>
 </html>
