--- a/templates/diallRegularVacationFormTemplate.html
+++ b/templates/diallRegularVacationFormTemplate.html
@@ -4,7 +4,11 @@
     <style>
         @font-face {
             font-family: GothamPro;
-            src: url(../fonts/gothampro.ttf);
+            src: url(../fonts/gothampro.eot);
+            src: url('fonts/gothampro.eot?#iefix') format('embedded-opentype'),
+                 url('fonts/gothampro.woff') format('woff'),
+                 url('fonts/gothampro.ttf') format('truetype'),
+                 url('fonts/gothampro.svg#rsuregular') format('svg');
         }
     </style>
 </head>
