--- a/templates/diallPostponeVacationFormTemplate.html
+++ b/templates/diallPostponeVacationFormTemplate.html
@@ -3,12 +3,16 @@
 <head>
     <style>
         @font-face {
-            font-family: GothamPro;
-            src: url(../fonts/gothampro.eot);
-            src: url('fonts/gothampro.eot?#iefix') format('embedded-opentype'),
-                 url('fonts/gothampro.woff') format('woff'),
-                 url('fonts/gothampro.ttf') format('truetype'),
-                 url('fonts/gothampro.svg#rsuregular') format('svg');
+            font-family: 'Gotham Pro';
+            src: url('../fonts/GothamPro.eot');
+            src: url('../fonts/GothamPro.eot?#iefix') format('embedded-opentype'),
+                url('../fonts/GothamPro.woff2') format('woff2'),
+                url('../fonts/GothamPro.woff') format('woff'),
+                url('../fonts/GothamPro.ttf') format('truetype'),
+                url('../fonts/GothamPro.svg#GothamPro') format('svg');
+            font-weight: normal;
+            font-style: normal;
+            font-display: swap;
         }
     </style>
 </head>
