--- a/templates/diallCodeConfirmationTemplate.html
+++ b/templates/diallCodeConfirmationTemplate.html
@@ -3,16 +3,16 @@
 <head>
     <style>
         @font-face {
-            font-family: 'Gotham Pro';
-            src: url('../fonts/GothamPro.eot');
-            src: url('../fonts/GothamPro.eot?#iefix') format('embedded-opentype'),
-                url('../fonts/GothamPro.woff2') format('woff2'),
-                url('../fonts/GothamPro.woff') format('woff'),
-                url('../fonts/GothamPro.ttf') format('truetype'),
-                url('../fonts/GothamPro.svg#GothamPro') format('svg');
+            font-family: 'gotham_proregular';
+            src: url('gothampro.eot');
+            src: url('gothampro.eot?#iefix') format('embedded-opentype'),
+                 url('gothampro.woff2') format('woff2'),
+                 url('gothampro.woff') format('woff'),
+                 url('gothampro.ttf') format('truetype'),
+                 url('gothampro.svg#gotham_proregular') format('svg');
             font-weight: normal;
             font-style: normal;
-            font-display: swap;
+
         }
     </style>
 </head>
