Diall template fixes, email theme fixes, postponed vacation text fixes.

--- a/templates/diallRegularVacationFormTemplate.html
+++ b/templates/diallRegularVacationFormTemplate.html
@@ -18,10 +18,10 @@
 </head>
 <body>
     <meta charset="UTF-8">
-    <p>Здравствуйте, {firstname}</p>
-    <p>Во вложении образец заявления на отпуск для сотрудников ООО "ДИАЛЛ АЛЬЯНС".</p>
-    <p>Заполните его, подпишите и передайте сотруднику Департамента по работе с персоналом.</p>
-    <p>С уважением, <br>Департамент по работе с персоналом</p>
+    <p>Здравствуйте, {firstname}.</p>
+    <p>Во вложении - ваше заявление на отпуск.</p>
+    <p>Подпишите его, согласуйте с руководителем и передайте сотруднику Отдела расчета заработной платы и КДП.</p>
+    <p>С уважением, <br>Отдел расчета заработной платы и КДП.</p>
     <img src="https://sigmabot.ddns.net/chatbot/files/diall_mail_ava.jpg">
 </body>
 </html>
