Diall templates font fixes.

--- a/templates/diallPostponeVacationFormTemplate.html
+++ b/templates/diallPostponeVacationFormTemplate.html
@@ -3,7 +3,7 @@
 <head>
     <style>
         @font-face {
-            font-family: 'gotham_proregular';
+            font-family: 'gothampro';
             src: url('gothampro.eot');
             src: url('gothampro.eot?#iefix') format('embedded-opentype'),
                  url('gothampro.woff2') format('woff2'),
