Templates, constants correction.

--- a/templates/diallCodeConfirmationTemplate.html
+++ b/templates/diallCodeConfirmationTemplate.html
@@ -21,7 +21,7 @@
     <p>Здравствуйте, {fullname}</p>
     <p>Для подтверждения, что вы являетесь сотрудником компании ООО "ДИАЛЛ АЛЬЯНС", пожалуйста, отправьте код подтверждения боту «Персональный ассистент работника» в Telegram</p>
     <p>Код подтверждения: <b>{confirmationCode}</b></p>
-    <p>С уважением, <br>Департамент по работе с персоналом</p>
+    <p>С уважением, <br>Отдел расчета заработной платы и КДП</p>
     <img src="https://sigmabot.ddns.net/chatbot/files/diall_mail_ava.jpg">
 </body>
 </html>
