--- a/templates/diallRegularVacationFormTemplate.html
+++ b/templates/diallRegularVacationFormTemplate.html
@@ -21,7 +21,7 @@
     <p>Здравствуйте, {firstname}.</p>
     <p>Во вложении - ваше заявление на отпуск.</p>
     <p>Подпишите его, согласуйте с руководителем и передайте сотруднику Отдела расчета заработной платы и КДП.</p>
-    <p>С уважением, <br>Отдел расчета заработной платы и КДП.</p>
+    <p>С уважением, <br>Отдел расчета заработной платы и КДП</p>
     <img src="https://sigmabot.ddns.net/chatbot/files/diall_mail_ava.jpg">
 </body>
 </html>
