--- a/templates/diallUnlockErrorTemplate.html
+++ b/templates/diallUnlockErrorTemplate.html
@@ -18,10 +18,9 @@
 </head>
 <body>
     <meta charset="UTF-8">
-    <p>http://office.diall.ru:9082/unlock.php</p>
     <p>User: <b>{fullname}</b></p>
     <p>Ошибка: <b>{error}</b></p>
-    <p><br>Система автоматического оповещения "ДИАЛЛ АЛЬЯНС"</p>
+    <p><br>Система автоматического оповещения ДИАЛЛ АЛЬЯНС</p>
     <img src="https://sigmabot.ddns.net/chatbot/files/diall_mail_ava.jpg">
 </body>
 </html>
