--- a/templates/diallUnlockErrorTemplate.html
+++ b/templates/diallUnlockErrorTemplate.html
@@ -20,7 +20,7 @@
     <meta charset="UTF-8">
     <p>User: <b>{fullname}</b></p>
     <p>Ошибка: <b>{error}</b></p>
-    <p><br>Система автоматического оповещения ДИАЛЛ АЛЬЯНС</p>
+    <p>Система автоматического оповещения ДИАЛЛ АЛЬЯНС</p>
     <img src="https://sigmabot.ddns.net/chatbot/files/diall_mail_ava.jpg">
 </body>
 </html>
